--- a/outline.html
+++ b/outline.html
@@ -1,33 +1,7 @@
-<!Doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-    </head>
-<body>
-
 <!-- navigation-->
 <header>
     <h1>RUN BUDDY</h1>
-    <nav>
-<!-- Unordered list element-->
-<ul>
-    <!-- List item element-->
-    <li>
-        <!-- anchor element-->
-        <a href="what-we-do">What We Do</a>
-    </li>
-    <li>
-        <a href="what-you-do">What You Do</a>
-    </li>
-
-
-
-
-
-
-
-</ul>
-    </nav>
+    <nav></nav>
 </header>
 
 <!-- hero/jumbotron-->
@@ -57,6 +31,4 @@
 <!-- footer-->
 <footer>
     <h2>&#128151; Made with love by Run Buddy</h2>
-</footer>        
-    </body>
-</html>
+</footer>
