--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <!-- navigation-->
 <header>
-    <h1>RUN BUDDY</h1>
+    <h1>
+        <a href="/">RUN BUDDY</a1>
+    </h1>
     <nav>
 <!-- Unordered list element-->
 <ul>
@@ -19,6 +21,16 @@
     <li>
         <a href="what-you-do">What You Do</a>
     </li>
+    <li>
+        <a href="#your-trainers">Your Trainers</a>
+    </li>
+    <li>
+        <a href="#reach-out">Reah Out</a>
+    </li>
+</ul>    
+</nav>
+</header>
+
 
 
 
