--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="C:\Users\csnyd\Desktop\projects\run-buddy\run-buddy style.css" />
     </head>
 <body>
 
@@ -10,6 +11,7 @@
     <h1>
         <a href="/">RUN BUDDY</a1>
     </h1>
+    
     <nav>
 <!-- Unordered list element-->
 <ul>
@@ -25,7 +27,7 @@
         <a href="#your-trainers">Your Trainers</a>
     </li>
     <li>
-        <a href="#reach-out">Reah Out</a>
+        <a href="#reach-out">Reach Out</a>
     </li>
 </ul>    
 </nav>
