--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1>
         <a href="/">RUN BUDDY</a1>
     </h1>
-    
+
     <nav>
 <!-- Unordered list element-->
 <ul>
     <!-- List item element-->
     <li>
         <!-- anchor element-->
-        <a href="what-we-do">What We Do</a>
+        <a href="#what-we-do">What We Do</a>
     </li>
     <li>
-        <a href="what-you-do">What You Do</a>
+        <a href="#what-you-do">What You Do</a>
     </li>
     <li>
         <a href="#your-trainers">Your Trainers</a>
@@ -31,17 +31,6 @@
     </li>
 </ul>    
 </nav>
-</header>
-
-
-
-
-
-
-
-
-</ul>
-    </nav>
 </header>
 
 <!-- hero/jumbotron-->
@@ -71,6 +60,10 @@
 <!-- footer-->
 <footer>
     <h2>&#128151; Made with love by Run Buddy</h2>
+    <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+      </div>
 </footer>        
     </body>
 </html>
