--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--end hero-->
 
 <!-- "what we do" section-->
-<section id="what-we-do">
+<section id="what-we-do" class="intro">
     <h2>What we Do</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officia magnam voluptatibus expedita at beatae deserunt. Eligendi fugiat, itaque culpa velit eius dolorem! Voluptas, magnam. Doloribus, excepturi facilis. Sunt, asperiores!
