--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
 <!-- "what we do" section-->
 <section id="what-we-do" class="intro">
-    <h2>What we Do</h2>
+    <h2 class="section-title primary-border">What we Do</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officia magnam voluptatibus expedita at beatae deserunt. Eligendi fugiat, itaque culpa velit eius dolorem! Voluptas, magnam. Doloribus, excepturi facilis. Sunt, asperiores!
       </p>
 </section>
 
 <!-- "what you do" section-->
-<section id="What-you-do">
-    <h2>What you do</h2>
+<section id="What-you-do" class="steps">
+    <h2 class="section-title secondary-border">What you do</h2>
 
     <div>
         <!-- insert this img element -->
