--- a/index.html
+++ b/index.html
@@ -147,6 +147,25 @@
 
 <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.639750568171!2d-94.79082758432149!3d38.840710479579435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0bef3228d343f%3A0x4187266579b6b1d5!2s17497%20W%20158th%20Pl%2C%20Olathe%2C%20KS%2066062!5e0!3m2!1sen!2sus!4v1639516079919!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    
+    </div>
+
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+       <br />
+       Let us know and we'll be happy to talk to you!
+       </p>
+       <address>
+        55 Main Street <br/>
+        Some Town, Ca <br/>
+        12345<br />
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
 </section>
 
 <footer>
