add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   
   <section class="hero">
 
+    <div class="hero-cta">
+      <h2>Start Building Habits</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates necessitatibus quibusdam sunt totam nobis tenetur nesciunt dolor non excepturi, ea quaerat mollitia error harum assumenda earum aut facere at quisquam.</p>
+    </div>
+
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
