added flexbox to hero

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
   
   <section class="hero">
 
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates necessitatibus quibusdam sunt totam nobis tenetur nesciunt dolor non excepturi, ea quaerat mollitia error harum assumenda earum aut facere at quisquam.</p>
+    </div>
+
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -176,7 +181,7 @@
   </section>
 
   <footer>
-    <h2>&#128151; Made with love by Run Buddy</h2>
+    <h2>❤️; Made with love by Run Buddy</h2>
     <div>
       <a href=".privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
